# RoboticProject

./: README.md  Robotics_presentation.pptx
ur_kinematic/: CMakeLists.txt  package.xml
ur_kinematic/src/: motion.cpp  parameters.h  prova.cpp
ur_kinematic/src/utils/: direct.cpp  eul2rotm.cpp  inverse.cpp  jacobian.cpp
ur_kinematic/srv/: generic_float.srv
ur_vision/: CMakeLists.txt  package.xml
ur_vision/src/: cameraListener.cpp
